[package]
name = "jira-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe       = "0.29"
egui         = "0.29"
reqwest      = { version = "0.12", features = ["json", "stream"] }
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
chrono       = { version = "0.4",  features = ["serde"] }
futures      = "0.3"
bytes        = "1"
rfd          = "0.15"
url          = "2"
base64       = "0.22"
aes-gcm      = "0.10"
rand         = "0.8"
winreg       = "0.52"

[profile.release]
opt-level = 3
